--- a/composer.json
+++ b/composer.json
@@ -18,9 +18,9 @@
     "spryker/customer": "^7.10.2",
     "spryker-shop/checkout-page": "^1.2.0",
     "spryker-shop/customer-page": "^1.2.0",
-    "fond-of-spryker/customer-page": "dev-master",
-    "fond-of-spryker/customer": "dev-master",
-    "fond-of-spryker/shipment": "dev-master",
+    "fond-of-spryker/customer-page": "1.0.1-RC1",
+    "fond-of-spryker/customer": "1.0.1-RC1",
+    "fond-of-spryker/shipment": "1.0.0-RC1",
     "spryker/shipment": "^6.5.0"
   },
   "require-dev": {
