--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     "spryker/customer": "^7.10.2",
     "spryker-shop/checkout-page": "^1.2.0",
     "spryker-shop/customer-page": "^1.2.0",
-    "spryker/shipment": "^6.5.0",
+    "spryker/shipment": "^6.5.0"
   },
   "require-dev": {
     "spryker/code-sniffer": "^0.11",
