--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "fond-of-spryker/checkout-page",
-  "description": "Remove customer registration from checkout (accountless checkout)",
+  "description": "Customise checkout process",
   "license": "MIT",
   "authors": [
     {
@@ -22,13 +22,11 @@
   },
   "require-dev": {
     "spryker/code-sniffer": "^0.14.7",
-    "codeception/codeception": "^2.5",
+    "codeception/codeception": "<4.1.2",
     "mikey179/vfsstream": "^1.6",
     "phpro/grumphp": "^0.14",
     "sebastian/phpcpd": "^4.1",
-    "php-coveralls/php-coveralls": "^2.0",
-    "spryker/kernel": "^3.42.4",
-    "spryker/application": "^3.19.0"
+    "php-coveralls/php-coveralls": "^2.0"
   },
   "autoload": {
     "psr-4": {
