--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
     "mikey179/vfsstream": "^1.6",
     "phpro/grumphp": "^0.14",
     "sebastian/phpcpd": "^4.1",
-    "php-coveralls/php-coveralls": "^2.0"
+    "php-coveralls/php-coveralls": "^2.0",
+    "fond-of-codeception/spryker": "dev-master"
   },
   "autoload": {
     "psr-4": {
