--- a/codeception.yml
+++ b/codeception.yml
@@ -19,4 +19,8 @@ paths:
 coverage:
   enabled: true
   include:
-    - src/*.php
+    - src/FondOfSpryker/*.php
+
+modules:
+  enabled:
+    - \FondOfCodeception\Module\Spryker
