--- a/codeception.yml
+++ b/codeception.yml
@@ -7,7 +7,8 @@ suites:
 settings:
   shuffle: true
   lint: true
-  bootstrap: _bootstrap.php
+
+bootstrap: _bootstrap.php
 
 paths:
   tests: tests
@@ -18,4 +19,8 @@ paths:
 coverage:
   enabled: true
   include:
-    - src/*.php
+    - src/FondOfSpryker/*.php
+
+modules:
+  enabled:
+    - \FondOfCodeception\Module\Spryker
