--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "fond-of-spryker/checkout-page",
-  "description": "Remove customer registration from checkout (accountless checkout)",
+  "description": "Customise checkout process",
   "license": "MIT",
   "authors": [
     {
@@ -8,27 +8,30 @@
       "email": "pascal.fischer@fondof.de"
     }
   ],
+  "scripts": {
+    "test": "make codeception",
+    "phpcs": "make phpcs",
+    "phpstan": "make phpstan"
+  },
   "minimum-stability": "dev",
   "prefer-stable": true,
   "require": {
     "php": ">=7.2",
     "spryker/glossary": "^3.8.0",
-    "spryker/kernel": "^3.42.4",
-    "spryker/zed-request": "^3.12.0",
     "spryker/customer": "^7.26.5",
     "spryker-shop/checkout-page": "^3.7.0",
     "spryker-shop/customer-page": "^2.7.1",
-    "spryker/shipment": "^8.0.2"
+    "spryker/shipment": "^8.0.2",
+    "spryker/quote": "^1.0.0 || ^2.0.0 || ^3.0.0"
   },
   "require-dev": {
     "spryker/code-sniffer": "^0.14.7",
-    "codeception/codeception": "^2.5",
+    "codeception/codeception": "<4.1.2",
     "mikey179/vfsstream": "^1.6",
     "phpro/grumphp": "^0.14",
     "sebastian/phpcpd": "^4.1",
     "php-coveralls/php-coveralls": "^2.0",
-    "spryker/kernel": "^3.42.4",
-    "spryker/application": "^3.19.0"
+    "fond-of-codeception/spryker": "dev-master"
   },
   "autoload": {
     "psr-4": {
@@ -38,7 +41,7 @@
   "autoload-dev": {
     "psr-4": {
       "FondOfSpryker\\": "tests/FondOfSpryker/",
-      "Generated\\": "tests/Generated/"
+      "Generated\\": "src/Generated/"
     }
   }
 }
