--- a/composer.json
+++ b/composer.json
@@ -25,13 +25,9 @@
     "spryker/quote": "^1.0.0 || ^2.0.0 || ^3.0.0"
   },
   "require-dev": {
-    "spryker/code-sniffer": "^0.14.7",
-    "codeception/codeception": "<4.1.2",
-    "mikey179/vfsstream": "^1.6",
-    "phpro/grumphp": "^0.14",
-    "sebastian/phpcpd": "^4.1",
-    "php-coveralls/php-coveralls": "^2.0",
-    "fond-of-codeception/spryker": "dev-master"
+    "fond-of-codeception/spryker": "^1.0",
+    "spryker/code-sniffer": "*",
+    "spryker-sdk/phpstan-spryker": "*"
   },
   "autoload": {
     "psr-4": {
