--- a/composer.json
+++ b/composer.json
@@ -24,8 +24,7 @@
     "spryker-shop/customer-page": "^2.7.1",
     "spryker-shop/home-page": "^1.0.0",
     "spryker/shipment": "^8.0.2",
-    "spryker/quote": "^1.0.0 || ^2.0.0 || ^3.0.0",
-    "fond-of-oryx/product-country-restriction-checkout-connector": "^1.1.0"
+    "spryker/quote": "^1.0.0 || ^2.0.0 || ^3.0.0"
   },
   "require-dev": {
     "fond-of-codeception/spryker": "^1.0",
