add dealerdirect/phpcodesniffer-composer-installer to allow-list

--- a/composer.json
+++ b/composer.json
@@ -43,5 +43,10 @@
       "Generated\\": "src/Generated/",
       "Orm\\": "src/Orm/"
     }
+  },
+  "config": {
+    "allow-plugins": {
+      "dealerdirect/phpcodesniffer-composer-installer": true
+    }
   }
 }
