- merge last changes (blacklisted countries)

--- a/composer.json
+++ b/composer.json
@@ -19,12 +19,13 @@
     "php": ">=7.3",
     "spryker/glossary": "^3.8.0",
     "spryker/customer": "^7.26.5",
-    "spryker-shop/checkout-page": "^3.7.0",
+    "spryker-shop/checkout-page": "^3.19.0",
     "fond-of-spryker/country": "dev-feature/paypal-refund || dev-spryker_upgrade || ^1.0.0",
     "spryker-shop/customer-page": "^2.7.1",
     "spryker-shop/home-page": "^1.0.0",
     "spryker/shipment": "^8.0.2",
-    "spryker/quote": "^1.0.0 || ^2.0.0 || ^3.0.0"
+    "spryker/quote": "^1.0.0 || ^2.0.0 || ^3.0.0",
+    "fond-of-oryx/product-country-restriction-checkout-connector": "^1.1.0"
   },
   "require-dev": {
     "fond-of-codeception/spryker": "^1.0",
@@ -41,6 +42,11 @@
       "FondOfSpryker\\": "tests/FondOfSpryker/",
       "Generated\\": "src/Generated/",
       "Orm\\": "src/Orm/"
+    }
+  },
+  "config": {
+    "allow-plugins": {
+      "dealerdirect/phpcodesniffer-composer-installer": true
     }
   }
 }
