--- a/codeception.yml
+++ b/codeception.yml
@@ -19,7 +19,7 @@ paths:
 coverage:
   enabled: true
   include:
-    - src/FondOfSpryker/*.php
+    - src/*.php
 
 modules:
   enabled:
@@ -38,6 +38,5 @@ env:
           generate_transfer: true
           generate_map_classes: true
           generate_propel_classes: true
-          supported_source_identifiers:
-            - page
+  monorepo:
 
