--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
   "require": {
     "php": ">=7.3",
     "spryker/glossary": "^3.8.0",
-    "spryker/customer": "^7.26.5",
+    "fond-of-spryker/customer": "dev-2022-spryker-upgrade",
     "spryker-shop/checkout-page": "^3.19.0",
     "fond-of-spryker/country": "dev-feature/paypal-refund || dev-spryker_upgrade || ^1.0.0",
     "spryker-shop/customer-page": "^2.7.1",
